[gd_scene load_steps=3 format=3 uid="uid://odh6vo7318xo"]

[ext_resource type="Texture2D" uid="uid://cavse8ld5bby8" path="res://Textures/Crafting/crafting_slot_background.png" id="1_j5isv"]
[ext_resource type="Script" uid="uid://cn7reipbxjwws" path="res://Scripts/UI/Crafting/crafting_slot.gd" id="1_yi4xb"]

[node name="CraftingSlot" type="Control"]
texture_filter = 1
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_yi4xb")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(380, 66)
scale = Vector2(10, 6)
texture = ExtResource("1_j5isv")

[node name="ItemIcon" type="Sprite2D" parent="."]
position = Vector2(60, 66)
scale = Vector2(3, 3)

[node name="Name" type="Label" parent="."]
layout_mode = 0
offset_left = 100.0
offset_top = 36.0
offset_right = 356.0
offset_bottom = 96.0

[node name="AmountCrafted" type="Label" parent="."]
layout_mode = 0
offset_left = 74.0
offset_top = 70.0
offset_right = 102.0
offset_bottom = 98.0
vertical_alignment = 1

[node name="NeededItem" type="Sprite2D" parent="."]
position = Vector2(400, 66)
scale = Vector2(3, 3)

[node name="NeededItemQuantity" type="Label" parent="."]
layout_mode = 0
offset_left = 450.0
offset_top = 36.0
offset_right = 550.0
offset_bottom = 96.0
vertical_alignment = 1

[node name="Price" type="Label" parent="."]
layout_mode = 0
offset_left = 640.0
offset_top = 36.0
offset_right = 730.0
offset_bottom = 96.0
vertical_alignment = 1

[node name="ScrapTexture" type="Sprite2D" parent="."]
position = Vector2(590, 66)
scale = Vector2(3, 3)

[node name="TextureButton" type="TextureButton" parent="."]
layout_mode = 0
offset_right = 760.0
offset_bottom = 132.0

[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
